--- a/ajax-load/form-appointment.html
+++ b/ajax-load/form-appointment.html
@@ -7,7 +7,7 @@
           <!-- Booking Form Starts -->
           <p class="lead">Solo para contacto distribuidores.</p>
           <!-- Appointment Form -->
-          <form id="popup_appointment_form" name="popup_appointment_form" class="" method="post" action="includes/appointment.php">
+          <form id="contactForm" method="post">
             <div class="row">
               <div class="col-sm-12">
                 <div class="form-group mb-10">
@@ -21,7 +21,7 @@
               </div>
               <div class="col-sm-12">
                 <div class="form-group mb-10">
-                  <input name="form_appontment_date" class="form-control required datetime-picker" type="text" placeholder="Fecha y Hora" aria-required="true">
+                  <input name="form_date" class="form-control required datetime-picker" type="text" placeholder="Fecha y Hora" aria-required="true">
                 </div>
               </div>
             </div>
@@ -29,36 +29,9 @@
               <textarea id="form_message" name="form_message" class="form-control required"  placeholder="Mensaje" rows="5" aria-required="true"></textarea>
             </div>
             <div class="form-group mb-0 mt-20">
-              <input id="form_botcheck" name="form_botcheck" class="form-control" type="hidden" value="">
-              <button type="submit" class="btn btn-dark btn-theme-colored" data-loading-text="Please wait...">Enviar Mensaje</button>
+              <button onclick="contactForm()" type="submit" class="btn btn-dark btn-theme-colored">Enviar Mensaje</button>
             </div>
           </form>
-
-          <!-- Appointment Form Validation-->
-          <script>
-            $("#popup_appointment_form").validate({
-              submitHandler: function(form) {
-                var form_btn = $(form).find('button[type="submit"]');
-                var form_result_div = '#form-result';
-                $(form_result_div).remove();
-                form_btn.before('<div id="form-result" class="alert alert-success" role="alert" style="display: none;"></div>');
-                var form_btn_old_msg = form_btn.html();
-                form_btn.html(form_btn.prop('disabled', true).data("loading-text"));
-                $(form).ajaxSubmit({
-                  dataType:  'json',
-                  success: function(data) {
-                    if( data.status == 'true' ) {
-                      $(form).find('.form-control').val('');
-                    }
-                    form_btn.prop('disabled', false).html(form_btn_old_msg);
-                    $(form_result_div).html(data.message).fadeIn('slow');
-                    setTimeout(function(){ $(form_result_div).fadeOut('slow') }, 6000);
-                  }
-                });
-              }
-            });
-  					THEMEMASCOT.initialize.TM_datePicker();
-          </script>
         </div>
       </div>
     </div>
